[gd_scene load_steps=9 format=2]

[ext_resource path="res://godot_tools/CommonAssets/font/Overlock/Overlock-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/steam_lobby/steam_lobby.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/menugrad.tres" type="Texture" id=3]
[ext_resource path="res://scenes/ui/steam_lobby/lobby_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/steam_lobby/chat.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="steam_lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
lobby_player = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_root" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1740.0
margin_bottom = 960.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/menu_root"]
margin_right = 1296.0
margin_bottom = 960.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/menu_root/VBoxContainer"]
margin_right = 1296.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "lobby view"

[node name="lobby_members" type="VBoxContainer" parent="MarginContainer/menu_root"]
margin_left = 1300.0
margin_right = 1740.0
margin_bottom = 960.0

[node name="party_count" type="Label" parent="MarginContainer/menu_root/lobby_members"]
margin_right = 440.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "party (1/4)"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/menu_root/lobby_members"]
margin_top = 64.0
margin_right = 440.0
margin_bottom = 68.0

[node name="lobby_players" type="VBoxContainer" parent="MarginContainer/menu_root/lobby_members"]
margin_top = 72.0
margin_right = 440.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobby_player" parent="MarginContainer/menu_root/lobby_members/lobby_players" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 440.0
margin_bottom = 88.0

[node name="invite" type="Button" parent="MarginContainer/menu_root/lobby_members"]
margin_top = 164.0
margin_right = 440.0
margin_bottom = 210.0
text = "invite friend"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/menu_root/lobby_members"]
margin_top = 370.0
margin_right = 440.0
margin_bottom = 374.0
size_flags_vertical = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chat" parent="MarginContainer/menu_root/lobby_members" instance=ExtResource( 5 )]
margin_top = 378.0
margin_bottom = 632.0

[node name="ready" type="Button" parent="MarginContainer/menu_root/lobby_members"]
margin_top = 750.0
margin_right = 440.0
margin_bottom = 796.0
size_flags_vertical = 10
text = "ready"

[node name="create_lobby" type="Button" parent="MarginContainer/menu_root/lobby_members"]
margin_top = 914.0
margin_right = 440.0
margin_bottom = 960.0
size_flags_vertical = 10
text = "create"
[connection signal="pressed" from="MarginContainer/menu_root/lobby_members/invite" to="." method="_on_invite_pressed"]
[connection signal="pressed" from="MarginContainer/menu_root/lobby_members/ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="MarginContainer/menu_root/lobby_members/create_lobby" to="." method="_on_create_lobby_pressed"]
